# regrow-app

./: .gitignore  CLAUDE.md  FEEDBACK.md  README.md  api.py  app.py  database.py  db_funciones.py  db_modelos.py  funciones.py  main.py  modelos.py  pyproject.toml  seed.py  templates.py
.github/workflows/: ci.yml
pages/: 1_Empresas.py  1_Proyectos.py  2_Clientes.py  2_Tareas.py  3_Campanas.py  3_Proyectos.py  4_Campañas.py  4_Configuracion.py  5_Tareas.py  6_Templates.py  7_Equipo.py
src/regrow/: main.py
src/regrow/adapters/api/: campaigns.py  clients.py  companies.py  projects.py  schemas.py
src/regrow/adapters/db/: engine.py  models.py  repository.py
src/regrow/domain/: models.py  services.py  templates.py
tests/: conftest.py  test_funciones.py
tests/integration/: test_campaigns.py
tests/unit/: test_services.py
