[project]
name = "regrow-app"
version = "0.1.0"
description = "Entorno profesional de desarrollo Python con Ruff, uv y pre-commit hooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "sqlmodel>=0.0.37",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # errores de estilo
    "W",    # warnings
    "F",    # pyflakes (errores lógicos)
    "I",    # isort (orden de imports)
    "N",    # naming conventions
    "UP",   # pyupgrade (modernizar sintaxis)
    "B",    # bugbear (errores comunes)
    "SIM",  # simplificar código
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
